# diurnal

./: .gitignore  pre_commit.py  pyproject.toml  readme.rst  requirements.txt  setup.py  test.py
data/: .gitignore
demo/: baseline.py  cnn.py  cnn_bracket.py  cnn_demo.py  cnn_interfamily_demo.py  cnn_matrix.py  cnn_matrix_mockup.py  cnn_matrix_synthetic.py  cnn_shadow.py  data_processing.ipynb  example.ipynb  mlp_interfamily_demo.py  multi_stage_training.ipynb  pipelines.ipynb  preprocessing.py  preprocessing_demo.py  readme.rst  refinement.ipynb  reinforcement_learning.ipynb  segmentation.ipynb  similarity_model_demo.py  specialized_networks.ipynb  synthetic_pipeline.ipynb  synthetic_pipeline.py  transform.ipynb  visualization.py
diurnal/: __init__.py  align.py  database.py  evaluate.py  family.py  models.py  segment.py  structure.py  train.py  transform.py  visualize.py
diurnal/models/: __init__.py  baseline.py
diurnal/networks/: mlp.py  similarity_model.py
diurnal/utils/: __init__.py  log.py  (+4 more)
docs/: conf.py  developer_guide.rst  diurnal.networks.rst  diurnal.rst  diurnal.utils.rst  index.rst  literature_review.rst  readme.rst  references.bib  references.rst  requirements.txt  user_guide.rst
src/: coding.py  database.py  download_data.py  encoding.py  evaluate.py  models.py  prepare_data.py  train.py  train_classifier.py  train_family_model.py  train_model.py
test/: conftest.py  dataset_validation.py  get_dataset_stats.py  info.rst  readme.rst  test_align.py  test_database.py  test_evaluate.py  test_families.py  test_pipeline.py  test_reinforcement_learning.py  test_segment.py  test_structure.py  test_train.py  test_transform.py  visualize_rna.py
(+21 files in other folders)
