[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diurnal"
version = "1.0.0"
authors = [
  { name="Vincent Therrien", email="therrien.vincent.2@courrier.uqam.ca" },
]
description = "Rna secondary prediction library"
readme = "readme.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Vincent-Therrien/diurnal"
"repository" = "https://github.com/Vincent-Therrien/diurnal"
