[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diurnal"
version = "1.0.0"
authors = [
  { name="Vincent Therrien", email="therrien.vincent.2@courrier.uqam.ca" },
]
description = "RNA secondary prediction library"
readme = "readme.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
keywords = [
    "RNA", "secondary structure", "machine learning", "deep learning",
    "reinforcement learning"
]

[tool.setuptools]
packages = [
    "diurnal",
    "diurnal.utils",
    "diurnal.models",
    "diurnal.models.deep",
    "diurnal.models.reinforcement"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Vincent-Therrien/diurnal"
"repository" = "https://github.com/Vincent-Therrien/diurnal"
